DarkMode.css
/* BEGIN Dark mode */

/* Edit the good/ evil team colours here */
:root {
  --dark-mode-good-colour: #52ceff;
  --dark-mode-evil-colour: #ff262b;
  --dark-mode-loric-colour: #819c49;
  --dark-mode-fabled-colour: #ffd760;
}

/* Remove background images */
.tab .container:not([data-v-0acf96d0]):not([data-v-d704e60f]),
.token .ability {
  /* using !important is bad practise, but overrides the inline styles 😔 */
  background: black !important;
}

/* Set black backgrounds to 15% transparent when not hidden */
.token:hover .ability[data-v-52a03550],
.tab .container:not(.hidden):not([data-v-0acf96d0]):not([data-v-d704e60f]) {
  opacity: 0.85;
}

/* Set uncoloured text to white */
.tab .container .ability,
.tab .container .team-special .name,
.container .title[data-v-3c7c5d00],
.tab .container .reminder,
.container.positioned .team .name,
li .name small[data-v-0c1e09ad],
.token .ability[data-v-52a03550] {
  color: white;
}

/* Subtly lighten text colours */
.token.team-townsfolk .ability b[data-v-52a03550],
.token.team-outsider .ability b[data-v-52a03550],
.team.townsfolk .name[data-v-3c7c5d00],
.team.outsider .name[data-v-3c7c5d00],
.team.jinxes .name .townsfolk[data-v-3c7c5d00],
.team.jinxes .name .outsider[data-v-3c7c5d00],
li.team-townsfolk .name[data-v-0c1e09ad],
li.team-outsider .name[data-v-0c1e09ad] {
  color: var(--dark-mode-good-colour);
}

.token.team-minion .ability b[data-v-52a03550],
.token.team-demon .ability b[data-v-52a03550],
.team.minion .name[data-v-3c7c5d00],
.team.demon .name[data-v-3c7c5d00],
.team.jinxes .name .minion[data-v-3c7c5d00],
.team.jinxes .name .demon[data-v-3c7c5d00],
li.team-minion .name[data-v-0c1e09ad],
li.team-demon .name[data-v-0c1e09ad] {
  color: var(--dark-mode-evil-colour);
}

.token.team-fabled .ability b[data-v-52a03550],
.fabled .name[data-v-3c7c5d00],
li.team-fabled .name[data-v-0c1e09ad] {
  color: var(--dark-mode-fabled-colour);
}

.token.team-loric .ability b[data-v-52a03550],
.loric .name[data-v-3c7c5d00],
li.team-loric .name[data-v-0c1e09ad] {
  color: var(--dark-mode-loric-colour);
}

/* END Dark mode */

